feat: add javafx simple ui